--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="appbum.mobile.com.appbum.SplashActivity">
+    tools:context="appbum.mobile.com.appbum.ui.activities.SplashActivity">
 
     <TextView
         android:layout_width="wrap_content"
